--- a/utils/home.html
+++ b/utils/home.html
@@ -14,6 +14,8 @@
     <a href="/login">user login</a>
     <a href="/doctor-login">Doctor login</a>
     <a href="/doctor-register-form">doctor-register-form</a>
+    <br>
+    <a href="/search">search doctor</a>
 </body>
 
 </html>
